package(default_visibility = ["//visibility:public"])
load(":sh_inline_test.bzl", "sh_inline_test")

exports_files([
    "pkgs/default.nix",
    "nix/overlays/required.nix",
    "criterion.sh",
])

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.4.3",
)

sh_library(
    name = "hlint_lib",
    srcs = [
        ".hlint.yaml",
    ],
)

sh_library(
    name = "stylish_haskell_lib",
    srcs = [
        ".stylish-haskell.yaml",
    ],
)

sh_inline_test(
    name = "shellcheck",
    script = "shellcheckTest.sh .",
    data = glob(["*.sh", "ci/*.sh", "pkgs/*.sh"]),
)