load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_import",
    "haskell_library",
    "haskell_test",
)

haskell_packages = [
    "base",
    "containers",
    "mtl",
    "mmorph",
    "lens",
]

test_packages = [
    "base",
    "hedgehog",
    "mtl",
    "tasty",
    "tasty-hedgehog",
    "tasty-hunit",
]

[
    haskell_import(name = name)
    for name in (list(depset(haskell_packages + test_packages)))
]


haskell_library(
    name = "plutus-core-interpreter",
    srcs = glob([
        "src/**/*.hs",
    ]),
    compiler_flags = [
        "-XStandaloneDeriving",
        "-XScopedTypeVariables",
        "-XFlexibleContexts",
        "-XDeriveGeneric",
        "-XStandaloneDeriving",
        "-XDeriveLift",
        "-XGeneralizedNewtypeDeriving",
        "-XDeriveFunctor",
        "-XDeriveFoldable",
        "-XDeriveTraversable",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [":" + name for name in haskell_packages] + [
        "//language-plutus-core:language-plutus-core",
    ],
)

haskell_test(
    name = "plutus-core-interpreter-test",
    srcs = glob([
        "test/**/*.hs",
    ]),
    compiler_flags = [
        "-XOverloadedStrings",
    ],
    src_strip_prefix = "test",
    visibility = ["//visibility:public"],
    deps = [":" + name for name in test_packages] + [
        ":plutus-core-interpreter",
        "//language-plutus-core:language-plutus-core",
    ],
)

load("//:sh_inline_test.bzl", "sh_inline_test")

sh_inline_test(
    name = "hlint",
    script = "hlintTest.sh .",
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
    deps = ["//:hlint_lib"],
)

sh_inline_test(
    name = "stylish",
    script = "stylishHaskellTest.sh plutus-core-interpreter",
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
    deps = ["//:stylish_haskell_lib"],
)
