load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_import",
    "haskell_library",
    "haskell_test",
)

haskell_packages = [
    "base",
    "template-haskell",
]

test_packages = [
    "base",
    "template-haskell",
    "mtl",
    "filepath",
    "tasty",
]

[
    haskell_import(name = name)
    for name in (list(depset(haskell_packages + test_packages)))
]

haskell_library(
    name = "plutus-tx",
    srcs = glob([
        "src/**/*.hs",
    ]),
    compiler_flags = [
        "-XExplicitForAll",
        "-XScopedTypeVariables",
        "-XDeriveGeneric",
        "-XStandaloneDeriving",
        "-XDeriveLift",
        "-XGeneralizedNewtypeDeriving",
        "-XDeriveFunctor",
        "-XDeriveFoldable",
        "-XDeriveTraversable",
    ],
    visibility = ["//visibility:public"],
    src_strip_prefix = "src",
    deps = [":" + name for name in haskell_packages] + [
        "//language-plutus-core:language-plutus-core",
        "//plutus-core-interpreter:plutus-core-interpreter",
        "//plutus-tx-plugin:plutus-tx-plugin",
    ],
)

haskell_test(
    name = "plutus-tx-test",
    srcs = glob([
        "test/*.hs",
    ]),
    src_strip_prefix = "test",
    data = glob([
        "test/*.golden",
    ]),
    visibility = ["//visibility:public"],
    deps = [":" + name for name in test_packages] + [
        "//language-plutus-core:language-plutus-core",
        "//plutus-core-interpreter:plutus-core-interpreter",
        "//plutus-tx-plugin:plutus-tx-plugin",
        "//runfiles:runfiles",
        ":plutus-tx",
    ],
)

load("//:sh_inline_test.bzl", "sh_inline_test")

sh_inline_test(
    name = "hlint",
    script = "hlintTest.sh .",
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
    deps = ["//:hlint_lib"],
)

sh_inline_test(
    name = "stylish",
    script = "stylishHaskellTest.sh plutus-tx",
    data = glob(["**/*.hs"], exclude = ["**/.stack-work/**"]),
    deps = ["//:stylish_haskell_lib"],
)